# obs-plugin-traduccion

./: CMakeLists.txt  buildspec.json
.github/workflows/: main.yml
src/: ai_audio_filter.cpp  ai_audio_filter.h  ai_subtitle_source.cpp  ai_subtitle_source.h  audio_processor.cpp  audio_processor.h  plugin-main.c
